Fix image jumping

--- a/_sass/skeleton.scss
+++ b/_sass/skeleton.scss
@@ -65,6 +65,16 @@
   .skeleton-subtitle {
     font-size: 1.1em;
   }
+
+  img {
+    /*
+
+    Unset absolute heights specified
+    in Markdown article content.
+    
+    */
+    height: auto !important;
+  }
 }
 
 p {
@@ -141,6 +151,7 @@ img {
   margin: 1.4em auto 0px auto;
 
   border-radius: 25px;
+  background-color: #0A1F3009;
 }
 
 hr {
